# crowbar

./: .gitignore  Cargo.toml  Makefile  PLAN.md  README.md
.github/workflows/: ci.yml
assets/: logo.txt  logo_small.txt
src/: app.rs  channel.rs  config.rs  editor.rs  error.rs  event.rs  fs_security.rs  main.rs  rules.rs  scanning.rs
src/app/: actions.rs  dialogs.rs  encode.rs  event.rs  handlers.rs  mod.rs  render.rs
src/http/: codec.rs  export.rs  import.rs  mod.rs  models.rs  proto_schema.rs  protobuf.rs  sequence.rs  session.rs  store.rs
src/proxy/: handler.rs  intercept.rs  mod.rs  repeater.rs  scope.rs  server.rs  tunnel.rs  ws_relay.rs
src/rules/: mod.rs  persist.rs
src/tls/: ca.rs  cert_cache.rs  cert_gen.rs  mod.rs
src/tui/: mod.rs  terminal.rs
src/tui/tabs/: history_tab.rs  mod.rs  proxy_tab.rs  repeater_tab.rs  rules_tab.rs  tools_tab.rs
src/tui/widgets/: body_view.rs  diff_view.rs  hex_view.rs  logo.rs  mod.rs  status_bar.rs  timing_view.rs
tests/fixtures/proto/: sample.proto
tests/fixtures/proto/nested/: extra.proto
tests/fixtures/proto_common/common/: types.proto
tests/fixtures/proto_importer/: main.proto
