[package]
name = "crowbar"
version = "0.5.0"
edition = "2024"
description = "A TUI web security testing proxy"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
http-body = "1"
http-body-util = "0.1"
http = "1"
bytes = "1"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rcgen = { version = "0.13", features = ["pem"] }
webpki-roots = "0.26"

# TUI
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Utilities
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
lru = "0.18"
futures = "0.3"
dashmap = "6"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
toml = "0.8"
tokio-util = "0.7"
regex = "1"
similar = "2"

# gRPC/protobuf schema support
protox = "0.9"
prost-reflect = "0.16"
prost = "0.14"
prost-types = "0.14"
arboard = "3"
parking_lot = "0.12"
